# zaltio

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ZALT-ARCHITECTURE.md  ZALT-CTO-IHTIYAC-RAPORU.md  ZALT-OZELLIK-LISTESI (1).md  ZALT-PLATFORM-COMPLETE-GUIDE.md  ZALT-PLATFORM-DURUM-RAPORU.md  ZALT-SAAS-PLATFORM.md  amplify-buildspec.yml  amplify.yml  jest.config.js  jest.e2e.config.js  package-lock.json  package.json  samconfig.toml  template.yaml  tsconfig.base.json  tsconfig.json  zalt-api-1.0.0.tgz
.aws-sam/: build.toml
.kiro/hooks/: execute-zalt-task.kiro.hook  zalt-auth-test-generator.kiro.hook  zalt-auto-executor.json  zalt-new-project-setup.kiro.hook  zalt-security-validator.kiro.hook
.kiro/settings/: mcp.json
clinisyn-x-zalt/: README.md
clinisyn-x-zalt/tests/: run-all-tests.sh  test-results.json
clinisyn-x-zalt/troubleshooting/: common-errors.md  debug-guide.md
dashboard/: .env.example  .env.production  .gitignore  Dockerfile  README.md  amplify.yml  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/k8s/: argocd-app.yaml  deployment.yaml  ingress.yaml  namespace.yaml
dashboard/public/: robots.txt
dashboard/scripts/: deploy.sh
dashboard/src/: middleware.ts
docs/: README.md  api-reference.md  getting-started.md  how-it-works.md  openapi.yaml  quickstart.md  sdk-guide.md  security.md  user-guide.md
docs/configuration/: email-templates.md  realm-settings.md  risk-rules.md  scim.md  sso-saml.md  webhooks.md
docs/guides/: fastapi-integration.md  mfa-setup.md  mobile-apps.md  nextjs-integration.md  node-express.md  passwordless.md  react-integration.md  scim.md  webauthn.md
docs/reference/: error-codes.md  jwt-claims.md  rate-limits.md
docs/tediyat/: INTEGRATION-GUIDE.md  TEDIYAT-INTEGRATION-SUMMARY.md  TEDIYAT-QUICKSTART.md  (+4 more)
scripts/: ZALT-API-DOCUMENTATION.md  aws-cli-mcp.py  clerk-migration.ts  clinisyn-oauth-setup.ts  clinisyn-realm-setup.ts  deploy.sh  mail-oauth-client.json  publish-sdk.sh  publish-vscode.sh  reset-local-clinisyn.ts  reset-ratelimit.ts  seed-clinisyn-branding.ts  setup-oauth-secrets.sh  tediyat-realm-setup.ts  update-clinisyn-sms.ts
src/sdk/python/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/sdk/python/examples/: basic_usage.py  fastapi_example.py  flask_example.py
src/sdk/python/hsd_auth/: __init__.py  client.py  errors.py  storage.py  types.py
src/sdk/python/hsd_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sdk/python/tests/: __init__.py  test_client.py  test_cross_sdk_consistency.py  test_integrations.py  test_webhooks.py
src/sdk/python/zalt_auth/: __init__.py  client.py  errors.py  storage.py  types.py  webhooks.py
src/sdk/python/zalt_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sdk/python/zalt_auth/integrations/: __init__.py  fastapi.py  flask.py
(+765 files in other folders)
