[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zalt-auth"
version = "1.0.0"
description = "Python SDK for Zalt.io Authentication Platform - Enterprise Auth-as-a-Service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Zalt.io Team", email = "dev@zalt.io"}
]
keywords = [
    "authentication", "auth", "zalt", "sdk", "api", "jwt", "oauth",
    "mfa", "totp", "webauthn", "passkeys", "hipaa", "gdpr", "enterprise"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]
flask = [
    "flask>=2.0.0",
]
all = [
    "fastapi>=0.100.0",
    "flask>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Documentation = "https://docs.zalt.io/sdk/python"
Repository = "https://github.com/zalt-io/zalt-auth-python"
Issues = "https://github.com/zalt-io/zalt-auth-python/issues"
Changelog = "https://github.com/zalt-io/zalt-auth-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["zalt_auth*"]

[tool.setuptools.package-data]
zalt_auth = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=zalt_auth --cov-report=term-missing"

[tool.coverage.run]
source = ["zalt_auth"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
